fixed input text align

--- a/style.css
+++ b/style.css
@@ -301,5 +301,5 @@ body::-webkit-scrollbar {
   color: black;
 }
 input { 
-  text-align: right; 
+  text-align: center; 
 }
